fluid sim modifier can crash blender #36769

Closed
opened 2013-09-18 18:20:27 +02:00 by Alexander N. · 12 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit, 16GB RAM, CPU: i7-3770,

- Blender version with error, and version that worked ---

all tested blender 2.68 versions ... til now

- Short description of error ---

when i turn down the final resolution setting of domain fluid sim modifier down to 7 or under, blender crashes at bake fluid.

i guess that low resolution value is more theoretical kind, but is should not crash blender anyway.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. open attached blend file

  2. bake fluid with resolution 8 or higher...
    ... blender works as expected.

  3. turn down resolution down to 7 or less

  4. bake fluid ...
    ... blender crashes.%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, 16GB RAM, CPU: i7-3770, - Blender version with error, and version that worked --- all tested blender 2.68 versions ... til now - Short description of error --- when i turn down the final resolution setting of domain fluid sim modifier down to 7 or under, blender crashes at bake fluid. i guess that low resolution value is more theoretical kind, but is should not crash blender anyway. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. open attached blend file 2. bake fluid with resolution 8 or higher... ... blender works as expected. 3. turn down resolution down to 7 or less 4. bake fluid ... ... blender crashes.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Can confirm that (though segfault does not always happen at level 7).

Daniel, I think this one is for you? Crash happens in elbeem, which makes use of dirty blackmagic macro! :p%%%

%%%Can confirm that (though segfault does not always happen at level 7). Daniel, I think this one is for you? Crash happens in elbeem, which makes use of dirty blackmagic macro! :p%%%
Member

%%%Seems to be fixed in 60990. I tried level 1 even.

Feel free to reopen this bug report if you encounter this crash with a later version of blender.

Thanks for reporting this issue!%%%

%%%Seems to be fixed in 60990. I tried level 1 even. Feel free to reopen this bug report if you encounter this crash with a later version of blender. Thanks for reporting this issue!%%%
Author
Member

%%%no, not fixed.
blender still crashes at baking lower final resolution level

tested with "blender-2.69-r61005-win64.zip" and the attached blend file, by using 6 as resolution level.
blender.exe --factory-startup -w -p 632 270 1280 720 -con%%%

%%%no, not fixed. blender still crashes at baking lower final resolution level tested with "blender-2.69-r61005-win64.zip" and the attached blend file, by using 6 as resolution level. blender.exe --factory-startup -w -p 632 270 1280 720 -con%%%
Member

%%%Since I have no way to reproduce the crash, I will de-assign myself from this bug.

What would help is a backtrace though.

But as I said: On windows 7 x64 it your blend file works "nicely" (it just doesn't bake anything, but doesn't crash either).%%%

%%%Since I have no way to reproduce the crash, I will de-assign myself from this bug. What would help is a backtrace though. But as I said: On windows 7 x64 it your blend file works "nicely" (it just doesn't bake anything, but doesn't crash either).%%%

Added subscriber: @Sergey

Added subscriber: @Sergey

Does blender still crash with latest builds from http://builder.blender.org/download/ ? And hat are the steps reproducing the crash would be then?

Does blender still crash with latest builds from http://builder.blender.org/download/ ? And hat are the steps reproducing the crash would be then?
Author
Member

yes, to me, blender "blender-2.69-6a2c467-win64.zip" still crash in the same way as described in the initial post.
see video issue_-_fluid_v2.mp4

Operating System, Graphics card
Windows 8.1 64bit, 16GB RAM, CPU: i7-3770,

no crash log was generated

yes, to me, blender "blender-2.69-6a2c467-win64.zip" still crash in the same way as described in the initial post. see video [issue_-_fluid_v2.mp4](https://archive.blender.org/developer/F76011/issue_-_fluid_v2.mp4) **Operating System, Graphics card** Windows 8.1 64bit, 16GB RAM, CPU: i7-3770, no crash log was generated

This issue was referenced by blender/blender-addons-contrib@1ab86e3f1f

This issue was referenced by blender/blender-addons-contrib@1ab86e3f1fa8a32c2e6fa778fe926eb9979fb3e8

This issue was referenced by 1ab86e3f1f

This issue was referenced by 1ab86e3f1fa8a32c2e6fa778fe926eb9979fb3e8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 1ab86e3f1f.

Closed by commit 1ab86e3f1f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36769
No description provided.