Fix T36769: fluid sim modifier can crash blender

Crash only happened when the number of openmp threads were greater than the resolution.